fixed spacing and color in product page

--- a/frontend/src/components/product/product.css
+++ b/frontend/src/components/product/product.css
@@ -13,3 +13,12 @@
   max-width: 100%;
   height: 17em;
 }
+
+.card-review {
+  color: black;
+  margin: 1rem 0;
+}
+
+.rating span:nth-child(5) {
+  margin-right: 1rem;
+}
